# object_pose_detection

./: .gitignore  .gitmodules  LICENSE.md  README.md
bag_extractor/: CMakeLists.txt  package.xml
bag_extractor/npz_visualization/: cad.mat  visualization.m
bag_extractor/src/: bag_to_file.py  bag_to_file_datacollection.py  bag_to_file_odometry.py  marker_republisher.py  path_publisher.py
object_keypoint_detector/: .gitattributes  CMakeLists.txt  package.xml  setup.py
object_keypoint_detector/keypoint_description/: num_keypoints.txt  num_keypoints_gascan.txt  num_keypoints_gascan_pelican.txt  num_keypoints_indoor.txt  num_keypoints_pascal.txt  pascal_num_keypoints.txt
object_keypoint_detector/launch/: human_mesh.launch  human_mesh_darknet.launch  object_pose_detection_pyfaster.launch  object_pose_detection_yolo_darknet.launch  object_pose_detection_yolo_pytorch.launch
object_keypoint_detector/models/: pascal.pt
object_keypoint_detector/rviz/: humans.rviz
object_keypoint_detector/scripts/: detection_republisher.py  keypoint_detector.py
object_keypoint_detector/src/: human_mesh.py  keypoint_detector.py  keypoint_detector_torch.py
object_keypoint_detector/src/models/: __init__.py  discriminator.py  hourglass.py  hourglass_v2.py  layers.py  layers_v2.py  smpl.py
object_keypoint_detector/src/models/large_model/: __init__.py
object_keypoint_detector/src/models/small_model/: __init__.py  hourglass.py  unet.py
object_keypoint_detector/src/smplx/: body_models.py
object_keypoint_detector/src/smplx/.svn/: wc.db
object_keypoint_detector/test/: convert.py  hourglass.py  valid_17.h5
object_pose_interface_msgs/: CMakeLists.txt  package.xml
object_pose_interface_msgs/msg/: DetectedObject.msg  KeypointDetection.msg  ObjectClassArray.msg
viso_pose/: .clang-format  CMakeLists.txt  package.xml
viso_pose/include/viso_pose/: VISOPose.h
viso_pose/src/: VISOPose.cpp  viso_node.cpp
viso_pose/src/libviso2/: filter.cpp  filter.h  matcher.cpp  matcher.h  matrix.cpp  reconstruction.cpp  sse_to_neon.h  triangle.cpp  viso.cpp  viso.h  viso_math.h  viso_mono.cpp  viso_stereo.cpp  viso_stereo.h
